force-app/main/default/objects/Work_Order__c/fields/X2_4_Drawings_Obtained_Actual__c.field-meta.xml
<CustomField>
    <fullName>X2_4_Drawings_Obtained_Actual__c</fullName>
    <label>1.2 Drawings Obtained</label>
    <type>Date</type>
</CustomField>