force-app/main/default/objects/Work_Order__c/fields/X2_4_Final_Engineering_Report_in_Box__c.field-meta.xml
<CustomField>
    <fullName>X2_4_Final_Engineering_Report_in_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The final engineering report has been uploaded to box.</description>
    <label>2.4 Final Engineering Report in Box</label>
    <type>Checkbox</type>
</CustomField>