force-app/main/default/objects/Work_Order__c/fields/X2_4_Final_Engineering_Report_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>X2_4_Final_Engineering_Report_Uploaded__c</fullName>
    <label>2.3 Final Engineering Report Uploaded</label>
    <type>Date</type>
</CustomField>