force-app/main/default/objects/Work_Order__c/fields/X2_5_Drawings_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>X2_5_Drawings_Additional_Information__c</fullName>
    <label>2.5 (Drawings) Additional Information</label>
    <type>TextArea</type>
</CustomField>