force-app/main/default/objects/Work_Order__c/fields/X2_Inspection__c.field-meta.xml
<CustomField>
    <fullName>X2_Inspection__c</fullName>
    <label>2. Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inspection in Progress</fullName>
            </value>
            <value>
                <fullName>Inspection Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>