force-app/main/default/objects/Work_Order__c/fields/X3_Inspection_Report__c.field-meta.xml
<CustomField>
    <fullName>X3_Inspection_Report__c</fullName>
    <label>6.1. Inspection Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inspection Report in Progress</fullName>
            </value>
            <value>
                <fullName>Inspection Report Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>