force-app/main/default/objects/Work_Order__c/fields/X3A_1_Inspect_Expected_Start__c.field-meta.xml
<CustomField>
    <fullName>X3A_1_Inspect_Expected_Start__c</fullName>
    <label>3A.1 (Inspect) Expected Start</label>
    <type>Date</type>
</CustomField>