force-app/main/default/objects/Work_Order__c/fields/X3A_2_Inspect_Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>X3A_2_Inspect_Actual_Start__c</fullName>
    <label>2.1 Inspection Start</label>
    <type>Date</type>
</CustomField>