force-app/main/default/objects/Work_Order__c/fields/X3A_3_Inspect_Expected_Completion__c.field-meta.xml
<CustomField>
    <fullName>X3A_3_Inspect_Expected_Completion__c</fullName>
    <label>3A.3 (Inspect) Expected Completion</label>
    <type>Date</type>
</CustomField>