force-app/main/default/objects/Work_Order__c/fields/X3A_4_Inspect_Actual_Completion__c.field-meta.xml
<CustomField>
    <fullName>X3A_4_Inspect_Actual_Completion__c</fullName>
    <label>2.2 Inspection Completion</label>
    <type>Date</type>
</CustomField>