force-app/main/default/objects/Work_Order__c/fields/X3A_5_Inspection_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>X3A_5_Inspection_Additional_Information__c</fullName>
    <label>3A.5 (Inspection) Additional Information</label>
    <type>TextArea</type>
</CustomField>