force-app/main/default/objects/Work_Order__c/fields/X3C_1_Expected_Start_Report__c.field-meta.xml
<CustomField>
    <fullName>X3C_1_Expected_Start_Report__c</fullName>
    <label>3C.1 (Report) Expected Start</label>
    <type>Date</type>
</CustomField>