force-app/main/default/objects/Work_Order__c/fields/X3C_1_Report_Service_Inspection__c.field-meta.xml
<CustomField>
    <fullName>X3C_1_Report_Service_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Completed yes or no</description>
    <label>2.3 Service Inspection</label>
    <type>Checkbox</type>
</CustomField>