force-app/main/default/objects/Work_Order__c/fields/X3C_2_Actual_Start_Report__c.field-meta.xml
<CustomField>
    <fullName>X3C_2_Actual_Start_Report__c</fullName>
    <label>3C.2 (Report) Actual Start</label>
    <type>Date</type>
</CustomField>