force-app/main/default/objects/Work_Order__c/fields/X3C_3_Expected_Completion_Report__c.field-meta.xml
<CustomField>
    <fullName>X3C_3_Expected_Completion_Report__c</fullName>
    <label>3C.3 (Report) Expected Completion</label>
    <type>Date</type>
</CustomField>