force-app/main/default/objects/Work_Order__c/fields/X3C_4_Actual_Completion_Report__c.field-meta.xml
<CustomField>
    <fullName>X3C_4_Actual_Completion_Report__c</fullName>
    <label>2.4 Report Completion</label>
    <type>Date</type>
</CustomField>