force-app/main/default/objects/Work_Order__c/fields/X3C_5_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>X3C_5_Recommendation__c</fullName>
    <label>3C.5 Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Repair the Unit</fullName>
            </value>
            <value>
                <fullName>Do Not Repair the Unit</fullName>
            </value>
            <value>
                <fullName>Unit is Repairable</fullName>
            </value>
            <value>
                <fullName>Unit Not Repairable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>