force-app/main/default/objects/Work_Order__c/fields/X3C_6_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>X3C_6_Additional_Information__c</fullName>
    <label>3C.6 (Report) Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>