force-app/main/default/objects/Work_Order__c/fields/X3D_Engineering_Inspection__c.field-meta.xml
<CustomField>
    <fullName>X3D_Engineering_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Completed yes or no</description>
    <label>2.5 Engineering Inspection</label>
    <type>Checkbox</type>
</CustomField>