force-app/main/default/objects/Work_Order__c/fields/X4_1_Estimate_Expected_Start__c.field-meta.xml
<CustomField>
    <fullName>X4_1_Estimate_Expected_Start__c</fullName>
    <label>4.1 (Estimate) Expected Start</label>
    <type>Date</type>
</CustomField>