force-app/main/default/objects/Work_Order__c/fields/X4_2_Estimate_Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>X4_2_Estimate_Actual_Start__c</fullName>
    <label>3.1 Estimate Start</label>
    <type>Date</type>
</CustomField>