force-app/main/default/objects/Work_Order__c/fields/X4_3_Estimate_Expected_Completion__c.field-meta.xml
<CustomField>
    <fullName>X4_3_Estimate_Expected_Completion__c</fullName>
    <label>4.3 (Estimate) Expected Completion</label>
    <type>Date</type>
</CustomField>