force-app/main/default/objects/Work_Order__c/fields/X4_4_Estimate_Revised_Expected__c.field-meta.xml
<CustomField>
    <fullName>X4_4_Estimate_Revised_Expected__c</fullName>
    <label>4.4 (Estimate) Revised Expected</label>
    <type>Date</type>
</CustomField>