force-app/main/default/objects/Work_Order__c/fields/X4_5_Estimate_Actual_Completion__c.field-meta.xml
<CustomField>
    <fullName>X4_5_Estimate_Actual_Completion__c</fullName>
    <label>3.2 Estimate Completion</label>
    <type>Date</type>
</CustomField>