force-app/main/default/objects/Work_Order__c/fields/X4_6_Estimate_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>X4_6_Estimate_Additional_Information__c</fullName>
    <label>4.6 (Estimate) Additional Information</label>
    <type>TextArea</type>
</CustomField>