force-app/main/default/objects/Work_Order__c/fields/X4_Estimate__c.field-meta.xml
<CustomField>
    <fullName>X4_Estimate__c</fullName>
    <label>3. Estimate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Estimate in Progress</fullName>
            </value>
            <value>
                <fullName>Estimate Sent to Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>