force-app/main/default/objects/Work_Order__c/fields/X52AActualPOApproval__c.field-meta.xml
<CustomField>
    <fullName>X52AActualPOApproval__c</fullName>
    <label>4.3 PO Approved Date</label>
    <type>Date</type>
</CustomField>