force-app/main/default/objects/Work_Order__c/fields/X5_1_Expected_PO_Approval__c.field-meta.xml
<CustomField>
    <fullName>X5_1_Expected_PO_Approval__c</fullName>
    <label>5.1 Expected PO Approval</label>
    <type>Date</type>
</CustomField>