force-app/main/default/objects/Work_Order__c/fields/X5_2A_PO_Recent__c.field-meta.xml
<CustomField>
    <fullName>X5_2A_PO_Recent__c</fullName>
    <label>5.2A PO Recent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>