force-app/main/default/objects/Work_Order__c/fields/X5_2B_Actual_PO_Decline__c.field-meta.xml
<CustomField>
    <fullName>X5_2B_Actual_PO_Decline__c</fullName>
    <label>4.4 PO Declined Date</label>
    <type>Date</type>
</CustomField>