force-app/main/default/objects/Work_Order__c/fields/X5_3_PO_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>X5_3_PO_Additional_Information__c</fullName>
    <label>5.3 (PO) Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>