force-app/main/default/objects/Work_Order__c/fields/X5_Customer_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>X5_Customer_Purchase_Order__c</fullName>
    <label>4. Client Purchase Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Approved - New</fullName>
            </value>
            <value>
                <fullName>Client Approved - Rebuild</fullName>
            </value>
            <value>
                <fullName>Client Approved - Scrap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>