force-app/main/default/objects/Work_Order__c/fields/X6_1_Parts_Ordered__c.field-meta.xml
<CustomField>
    <fullName>X6_1_Parts_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have the parts been ordered?</description>
    <label>5.1 Parts Ordered</label>
    <type>Checkbox</type>
</CustomField>