force-app/main/default/objects/Work_Order__c/fields/X6_1_Quality_Control_Report__c.field-meta.xml
<CustomField>
    <fullName>X6_1_Quality_Control_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>6.1 Quality Control Report</label>
    <type>Checkbox</type>
</CustomField>