force-app/main/default/objects/Work_Order__c/fields/X6_2_Parts_Received__c.field-meta.xml
<CustomField>
    <fullName>X6_2_Parts_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have the parts been received?</description>
    <label>5.2 Parts Received</label>
    <type>Checkbox</type>
</CustomField>