force-app/main/default/objects/Work_Order__c/fields/X6__c.field-meta.xml
<CustomField>
    <fullName>X6__c</fullName>
    <label>6A.2 - Parts Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>