force-app/main/default/objects/Work_Order__c/fields/X6_Order_Parts__c.field-meta.xml
<CustomField>
    <fullName>X6_Order_Parts__c</fullName>
    <label>5. Order Parts</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parts Ordered</fullName>
            </value>
            <value>
                <fullName>Parts Received</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>