force-app/main/default/objects/Work_Order__c/fields/X6A_1_Parts_Ordered__c.field-meta.xml
<CustomField>
    <fullName>X6A_1_Parts_Ordered__c</fullName>
    <label>6A.1 Parts Ordered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>