force-app/main/default/objects/Work_Order__c/fields/X6A_1_Parts_Ordered_Expected_Start__c.field-meta.xml
<CustomField>
    <fullName>X6A_1_Parts_Ordered_Expected_Start__c</fullName>
    <label>6A.1 (Parts Ordered) Expected Start</label>
    <type>Date</type>
</CustomField>