force-app/main/default/objects/Work_Order__c/fields/X6A_2_Parts_Ordered_Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>X6A_2_Parts_Ordered_Actual_Start__c</fullName>
    <label>6A.2 (Parts Ordered) Actual Start</label>
    <type>Date</type>
</CustomField>