force-app/main/default/objects/Work_Order__c/fields/X6A_3_Parts_Received_Expected_Arrival__c.field-meta.xml
<CustomField>
    <fullName>X6A_3_Parts_Received_Expected_Arrival__c</fullName>
    <label>6A.3 (Parts Received) Expected Arrival</label>
    <type>Date</type>
</CustomField>