force-app/main/default/objects/Work_Order__c/fields/X6A_4_Parts_Received_Actual_Arrival__c.field-meta.xml
<CustomField>
    <fullName>X6A_4_Parts_Received_Actual_Arrival__c</fullName>
    <label>6A.4 (Parts Received) Actual Arrival</label>
    <type>Date</type>
</CustomField>