force-app/main/default/objects/Work_Order__c/fields/X6A_5_Order_Parts_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>X6A_5_Order_Parts_Additional_Information__c</fullName>
    <description>Free-text field used to list vendor #, PO #, and if the order has arrived at Welco.</description>
    <label>5.3 Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>