force-app/main/default/objects/Work_Order__c/fields/X6A_Order_Partsx__c.field-meta.xml
<CustomField>
    <fullName>X6A_Order_Partsx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>6A. Order Parts x:</label>
    <type>Checkbox</type>
</CustomField>