force-app/main/default/objects/Work_Order__c/fields/X6B_1_Parts_Sent_Expected_Start__c.field-meta.xml
<CustomField>
    <fullName>X6B_1_Parts_Sent_Expected_Start__c</fullName>
    <label>6B.1 (Parts Sent) Expected Start</label>
    <type>Date</type>
</CustomField>