force-app/main/default/objects/Work_Order__c/fields/X6B_2_Parts_Sent_Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>X6B_2_Parts_Sent_Actual_Start__c</fullName>
    <label>6B.2 (Parts Sent) Actual Start</label>
    <type>Date</type>
</CustomField>