force-app/main/default/objects/Work_Order__c/fields/X6B_3_Parts_Received_Expected_Completion__c.field-meta.xml
<CustomField>
    <fullName>X6B_3_Parts_Received_Expected_Completion__c</fullName>
    <label>6B.3 (Parts Received)Expected Completion</label>
    <type>Date</type>
</CustomField>