force-app/main/default/objects/Work_Order__c/fields/X6B_4_Parts_Received_Actual_Completion__c.field-meta.xml
<CustomField>
    <fullName>X6B_4_Parts_Received_Actual_Completion__c</fullName>
    <label>6B.4 (Parts Received) Actual Completion</label>
    <type>Date</type>
</CustomField>