force-app/main/default/objects/Work_Order__c/fields/X6B_5_Send_Parts_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>X6B_5_Send_Parts_Additional_Information__c</fullName>
    <label>6B.5 (Send Parts) Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>