force-app/main/default/objects/Work_Order__c/fields/X6B_Send_Parts_to_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>X6B_Send_Parts_to_Third_Party__c</fullName>
    <label>6B. Send Parts to Third Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parts Sent to Third Party</fullName>
            </value>
            <value>
                <fullName>Parts Received from Third Party</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>