force-app/main/default/objects/Work_Order__c/fields/X6C_1_Clean_Parts__c.field-meta.xml
<CustomField>
    <fullName>X6C_1_Clean_Parts__c</fullName>
    <label>6C.1 Clean Parts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>