force-app/main/default/objects/Work_Order__c/fields/X6C_1_Clean_PartsActualStart__c.field-meta.xml
<CustomField>
    <fullName>X6C_1_Clean_PartsActualStart__c</fullName>
    <description>Used to record when the shop started cleaning the parts</description>
    <label>6C.1 (Clean Parts) Actual Start</label>
    <type>Date</type>
</CustomField>