force-app/main/default/objects/Work_Order__c/fields/X6C_2_Clean_Parts_Actual_Completion__c.field-meta.xml
<CustomField>
    <fullName>X6C_2_Clean_Parts_Actual_Completion__c</fullName>
    <description>Used to record when the shop is done cleaning the parts. Required to automate a push to status 7. Unit Repair</description>
    <label>6C.2 (Clean Parts) Actual Completion</label>
    <type>Date</type>
</CustomField>