force-app/main/default/objects/Work_Order__c/fields/X6C_3_Clean_Parts_Additional_Informatio__c.field-meta.xml
<CustomField>
    <fullName>X6C_3_Clean_Parts_Additional_Informatio__c</fullName>
    <description>Free-text field to provide additional information from the cleaning process</description>
    <label>6C.3 (Clean Parts)Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>