force-app/main/default/objects/Work_Order__c/fields/X6C_Clean_Parts__c.field-meta.xml
<CustomField>
    <fullName>X6C_Clean_Parts__c</fullName>
    <description>Used to define status of parts cleaning by the shop</description>
    <label>6C. Clean Parts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parts Cleaning in Progress</fullName>
            </value>
            <value>
                <fullName>Parts Cleaning Completed</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>