force-app/main/default/objects/Work_Order__c/fields/X6C_Clean_Partsx__c.field-meta.xml
<CustomField>
    <fullName>X6C_Clean_Partsx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>6C. Clean Partsx</label>
    <type>Checkbox</type>
</CustomField>