force-app/main/default/objects/Work_Order__c/fields/X7_1_Repair_Expected_Start__c.field-meta.xml
<CustomField>
    <fullName>X7_1_Repair_Expected_Start__c</fullName>
    <label>7.1 (Repair) Expected Start</label>
    <type>Date</type>
</CustomField>