force-app/main/default/objects/Work_Order__c/fields/X7_2_Repair_Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>X7_2_Repair_Actual_Start__c</fullName>
    <label>7.2 (Repair) Actual Start</label>
    <type>Date</type>
</CustomField>