force-app/main/default/objects/Work_Order__c/fields/X7_3_Repair_Expected_Completion__c.field-meta.xml
<CustomField>
    <fullName>X7_3_Repair_Expected_Completion__c</fullName>
    <label>7.3 (Repair) Expected Completion</label>
    <type>Date</type>
</CustomField>