force-app/main/default/objects/Work_Order__c/fields/X7_4_Repair_Actual_Completion__c.field-meta.xml
<CustomField>
    <fullName>X7_4_Repair_Actual_Completion__c</fullName>
    <label>7.4 (Repair) Actual Completion</label>
    <type>Date</type>
</CustomField>