force-app/main/default/objects/Work_Order__c/fields/X7_5_Repair_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>X7_5_Repair_Additional_Information__c</fullName>
    <label>7.5 (Repair) Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>