force-app/main/default/objects/Work_Order__c/fields/X7_Unit_Repair__c.field-meta.xml
<CustomField>
    <fullName>X7_Unit_Repair__c</fullName>
    <label>7. Unit Repair</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready to be Repaired</fullName>
            </value>
            <value>
                <fullName>Repair in Progress</fullName>
            </value>
            <value>
                <fullName>Repair Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>