force-app/main/default/objects/Work_Order__c/fields/X8_1_Quality_Check_Expected_Start__c.field-meta.xml
<CustomField>
    <fullName>X8_1_Quality_Check_Expected_Start__c</fullName>
    <label>8.1 (Quality Check) Expected Start</label>
    <type>Date</type>
</CustomField>