force-app/main/default/objects/Work_Order__c/fields/X8_2_Quality_Check_Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>X8_2_Quality_Check_Actual_Start__c</fullName>
    <label>8.2 (Quality Check) Actual Start</label>
    <type>Date</type>
</CustomField>