force-app/main/default/objects/Work_Order__c/fields/X8_3_Quality_Check_Expected_Completion__c.field-meta.xml
<CustomField>
    <fullName>X8_3_Quality_Check_Expected_Completion__c</fullName>
    <label>8.3 (Quality Check) Expected Completion</label>
    <type>Date</type>
</CustomField>