force-app/main/default/objects/Work_Order__c/fields/X8_4_Quality_Check_Actual_Completion__c.field-meta.xml
<CustomField>
    <fullName>X8_4_Quality_Check_Actual_Completion__c</fullName>
    <label>8.4 (Quality Check) Actual Completion</label>
    <type>Date</type>
</CustomField>