force-app/main/default/objects/Work_Order__c/fields/X8_5_Quality_Check_Additional_Informatio__c.field-meta.xml
<CustomField>
    <fullName>X8_5_Quality_Check_Additional_Informatio__c</fullName>
    <label>8.5(Quality Check)Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>