force-app/main/default/objects/Work_Order__c/fields/X8_Quality_Control_Check__c.field-meta.xml
<CustomField>
    <fullName>X8_Quality_Control_Check__c</fullName>
    <label>6. Quality Control</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quality Control Check in Progress</fullName>
            </value>
            <value>
                <fullName>Quality Control Check Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>