force-app/main/default/objects/Work_Order__c/fields/X9_1_ID_Tag_Expected_Completion__c.field-meta.xml
<CustomField>
    <fullName>X9_1_ID_Tag_Expected_Completion__c</fullName>
    <label>9.1 (ID Tag) Expected Completion</label>
    <type>Date</type>
</CustomField>