force-app/main/default/objects/Work_Order__c/fields/X9_2_ID_Tag_Actual_Completion__c.field-meta.xml
<CustomField>
    <fullName>X9_2_ID_Tag_Actual_Completion__c</fullName>
    <label>9.2 (ID Tag) Actual Completion</label>
    <type>Date</type>
</CustomField>