force-app/main/default/objects/Work_Order__c/fields/X9_3_ID_Tag_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>X9_3_ID_Tag_Additional_Information__c</fullName>
    <label>9.3 (ID Tag) Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>