force-app/main/default/objects/Work_Order__c/fields/X9_Identification_Tag__c.field-meta.xml
<CustomField>
    <fullName>X9_Identification_Tag__c</fullName>
    <label>9. Identification Tag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Identification Tag Completed and Attached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>