force-app/main/default/objects/Work_Order__c/recordTypes/Cyclone.recordType-meta.xml
<RecordType>
    <fullName>Cyclone</fullName>
    <active>true</active>
    <description>Cyclone Repair</description>
    <label>Cyclone</label>
</RecordType>