force-app/main/default/objects/Work_Order__c/recordTypes/Pump_Horizontal.recordType-meta.xml
<RecordType>
    <fullName>Pump_Horizontal</fullName>
    <active>true</active>
    <description>Horizontal Pump Repair</description>
    <label>Pump - Horizontal</label>
</RecordType>