force-app/main/default/objects/Work_Order__c/recordTypes/Pump_Submersible.recordType-meta.xml
<RecordType>
    <fullName>Pump_Submersible</fullName>
    <active>true</active>
    <description>Submersible Pump Repair</description>
    <label>Pump - Submersible</label>
</RecordType>