force-app/main/default/objects/Work_Order__c/recordTypes/Pump_Vertical.recordType-meta.xml
<RecordType>
    <fullName>Pump_Vertical</fullName>
    <active>true</active>
    <description>Vertical Pump Repair</description>
    <label>Pump - Vertical</label>
</RecordType>