force-app/main/default/objects/Work_Order__c/recordTypes/Valve.recordType-meta.xml
<RecordType>
    <fullName>Valve</fullName>
    <active>true</active>
    <label>Valve</label>
</RecordType>