force-app/main/default/objects/Work_Order__c/recordTypes/X3rdPartyRepairOther.recordType-meta.xml
<RecordType>
    <fullName>X3rdPartyRepairOther</fullName>
    <active>true</active>
    <description>3rd Party or Miscellaneous Repair</description>
    <label>3rd Party Repair/Other</label>
</RecordType>