force-app/main/default/objects/Work_Order__c/validationRules/WOR001_Validate_Customer_Shared_Box_Link.validationRule-meta.xml
<ValidationRule>
    <fullName>WOR001_Validate_Customer_Shared_Box_Link</fullName>
    <active>true</active>
    <errorConditionFormula>!BEGINS( Box_Folder_Link__c , &quot;https://welco.box.com/s/&quot;)</errorConditionFormula>
    <errorDisplayField>Box_Folder_Link__c</errorDisplayField>
    <errorMessage>Error WOR001
Customer Shared Box Link must be a share link</errorMessage>
</ValidationRule>