force-app/main/default/objects/Work_Order__c/validationRules/WOR005_RevisedEstimateDateReasonRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>WOR005_RevisedEstimateDateReasonRequired</fullName>
    <active>true</active>
    <description>Reason is required if revised date for estimate is entered</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(X4_4_Estimate_Revised_Expected__c)),
ISBLANK(X4_6_Estimate_Additional_Information__c)
)</errorConditionFormula>
    <errorDisplayField>X4_6_Estimate_Additional_Information__c</errorDisplayField>
    <errorMessage>Error WOR005
Reason for revised estimate date is required</errorMessage>
</ValidationRule>