force-app/main/default/objects/Work_Order__c/validationRules/WOR006_Reason_for_Late_Quote_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>WOR006_Reason_for_Late_Quote_Required</fullName>
    <active>false</active>
    <description>If the response to “Quote Provided Within Target” is No, please complete the “Reason for Late Quote” column.</description>
    <errorConditionFormula>AND(
   AND(
       ISBLANK ( Close_Date__c ),
       ISBLANK ( Unit_Actual_Scrap_Return_Date__c ),
       /*check open work orders only*/

       NOT(ISBLANK( Arrival_Date__c )),
       NOT(ISBLANK( X4_5_Estimate_Actual_Completion__c )),
       Quote_Provided_within_Target__c = &quot;N&quot;
       ),

   ISBLANK ( X4_6_Estimate_Additional_Information__c )
   )</errorConditionFormula>
    <errorDisplayField>X4_6_Estimate_Additional_Information__c</errorDisplayField>
    <errorMessage>Error WOR006
Please state why the quote was not completed within 5 business days under section 4.6</errorMessage>
</ValidationRule>