force-app/main/default/objects/Work_Order__c/validationRules/WOR008_Invoice_Number_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>WOR008_Invoice_Number_Required</fullName>
    <active>true</active>
    <description>Invoice Number is required when the repaired equipment has been Approved to be Shipped back to the customer.</description>
    <errorConditionFormula>AND( 
ISPICKVAL(CompleteandClose__c, &quot;Repaired, Send back to Customer&quot;),
ISBLANK ( AdagioInvoiceNumber__c )
)</errorConditionFormula>
    <errorDisplayField>AdagioInvoiceNumber__c</errorDisplayField>
    <errorMessage>Error WOR008
Please enter the Invoice Number</errorMessage>
</ValidationRule>