force-app/main/default/objects/Work_Order__c/validationRules/WOR010_Order_Number_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>WOR010_Order_Number_Required</fullName>
    <active>true</active>
    <description>Order Number is required when the repaired equipment has been Approved to be Shipped back to the customer or the customer has decided to order new.</description>
    <errorConditionFormula>AND( 
OR( 
ISPICKVAL(CompleteandClose__c, &quot;Repaired, Send back to Customer&quot;), 
ISPICKVAL(CompleteandClose__c, &quot;Not Repaired, Ordered New&quot;) 
), 

ISBLANK ( AdagioOrderNumber__c ) 
)</errorConditionFormula>
    <errorDisplayField>AdagioOrderNumber__c</errorDisplayField>
    <errorMessage>Error WOR010
Please enter the Order Number</errorMessage>
</ValidationRule>