force-app/main/default/objects/Work_Order__c/validationRules/WOR011_CustomerPO_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>WOR011_CustomerPO_Required</fullName>
    <active>false</active>
    <description>Customer PO is required when the repaired equipment has been Approved to be Shipped back to the customer or the customer has decided to order new.</description>
    <errorConditionFormula>AND( 
OR( 
ISPICKVAL(CompleteandClose__c, &quot;Repaired, Send back to Customer&quot;), 
ISPICKVAL(CompleteandClose__c, &quot;Not Repaired, Ordered New&quot;) 
), 

ISBLANK ( PO_Number__c ) 
)</errorConditionFormula>
    <errorDisplayField>PO_Number__c</errorDisplayField>
    <errorMessage>Error WOR011
Please enter the Customer PO</errorMessage>
</ValidationRule>